--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "recoil": "^0.7.7",
     "web-vitals": "^2.1.4"
   },
@@ -30,7 +32,7 @@
     "extends": [
       "react-app",
       "react-app/jest",
-      "plugin:jest-dom/recommended" 
+      "plugin:jest-dom/recommended"
     ]
   },
   "browserslist": {
