--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.4",
     "react-firebase-hooks": "^5.1.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.8.0",
